--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "andreaselia",
     "thomaslombart",
     "j3lte",
-    "joeynotjoe"
+    "joeynotjoe",
+    "VBenny42"
   ],
   "categories": [
     "Media",
@@ -18,32 +19,27 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "search",
-      "title": "Search",
+      "name": "get-episode-info",
+      "title": "Get Episode Info",
       "subtitle": "The Movie Database",
-      "description": "Search for movies or TV shows.",
-      "mode": "view"
-    },
-    {
-      "name": "now-playing",
-      "title": "Now Playing",
-      "subtitle": "The Movie Database",
-      "description": "View movies or TV shows that are playing right now.",
-      "mode": "view"
-    },
-    {
-      "name": "top-rated",
-      "title": "Top Rated",
-      "subtitle": "The Movie Database",
-      "description": "View the best movies or TV shows of all time.",
-      "mode": "view"
-    },
-    {
-      "name": "upcoming-movies",
-      "title": "Upcoming Movies",
-      "subtitle": "The Movie Database",
-      "description": "View the upcoming movies.",
-      "mode": "view"
+      "description": "Search for TV show episodes.",
+      "mode": "view",
+      "preferences": [
+        {
+          "name": "currShow",
+          "title": "Current Show",
+          "description": "The current show you are watching",
+          "type": "textfield",
+          "required": false
+        },
+        {
+          "name": "currShowSeason",
+          "title": "Current Show Season",
+          "description": "The current show season you are watching",
+          "type": "textfield",
+          "required": false
+        }
+      ]
     }
   ],
   "preferences": [
