added pagination for episodes. want to figure out how to remove item from stack or "take over" current action

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "title": "The Movie Database",
   "description": "Browse through hundreds of thousands of movies and tv shows, see new releases, parental guide and much more.",
   "icon": "command-icon.png",
-  "author": "Aayush9029",
+  "author": "VBenny42",
   "contributors": [
     "andreaselia",
     "thomaslombart",
